@@ -4,6 +4,7 @@ import com.june.myspring.pojo.User;
 
 import javax.sql.DataSource;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.sql.*;
 import java.util.ArrayList;
 import java.util.List;
@@ -26,20 +27,19 @@ public class UserDaoImpl implements UserDao{
 
         try {
             connection = dataSource.getConnection();
-            String sql = "select * from user where";
+            String sql = "select * from users where name=?";
             preparedStatement = connection.prepareStatement(sql);
-//            preparedStatement.setObject(1,params.get("name"));
-            resultSet = preparedStatement.executeQuery();
-
+            preparedStatement.setObject(1,params.get("name"));
             List<User> results = new ArrayList<>();
             User result = null;
             Class<?> clazz = User.class;
+            resultSet = preparedStatement.executeQuery();
             while (resultSet.next()){
-                result = (User) clazz.newInstance();
+                result = (User) clazz.getDeclaredConstructor().newInstance();
                 ResultSetMetaData metaData = resultSet.getMetaData();
                 int len = metaData.getColumnCount();
                 for(int i = 0; i < len ; i ++){
-                    String name = metaData.getCatalogName(i + 1);
+                    String name = metaData.getColumnName(i + 1);
                     Field field = clazz.getDeclaredField(name);
                     field.setAccessible(true);
                     field.set(result,resultSet.getObject(i + 1));
@@ -50,13 +50,7 @@ public class UserDaoImpl implements UserDao{
             }
             return  results;
 
-        } catch (SQLException e) {
-            e.printStackTrace();
-        } catch (InstantiationException e) {
-            e.printStackTrace();
-        } catch (IllegalAccessException e) {
-            e.printStackTrace();
-        } catch (NoSuchFieldException e) {
+        } catch (SQLException | InstantiationException|IllegalAccessException | NoSuchFieldException | InvocationTargetException | NoSuchMethodException e) {
             e.printStackTrace();
         } finally {
             if(resultSet !=null){
